5.1.6 -> 5.1.7:
    - jbj: perl: add a sentinel to rpmdsSingle() rather than exporting rpmdsDup().
    - jbj: update po files (Translation Project).
    - jbj: fix: don't display lua info if compiled --without-lua.
    - jbj: rpmds: add storage and getters for exclude/include patterns.
    - jbj: rpmds: expose rpmdsType() in rpmds ABI.
    - jbj: rpmds: add rpmdsType() to name dependency sets status quo ante.
    - afb: rpmrepo: fix installed size bug (wrong value being written)
    - jbj: fix: better choice for paths to add (#473814 comment #4).
    - jbj: fix: include build dirname to find multiple *.pc (#473814).
    - jbj: lua: inline a copy of getdate.c
    - jbj: WR: lua: display "rpm:lua:foo" progname w chkconfig/useradd/groupadd
	errors.
    - jbj: WR: fix: sqlite assertion failure while sequentially retrieving keys.
    - jbj: update INSTALL to indicate that external zlib is preferred now.
    - at: fix: initialize msbits of erased package keys to zeroes on 64b hosts.
    - jbj: lua: bind mkdtemp(3) in lposix.c
    - jbj: macros: add %{mkdtemp:...} primitive (consistent leading whitespace too).
    - jbj: include tests/*.src.rpm, exclude tests/ref/CVS/*, with "make dist".
    - jbj: fix: __OpenBSD__ insque(3) needs rpmsq rock initialized.
    - jbj: add #ifdef's needed to compile on __OpenBSD__.
    - jbj: fix: permit " number %d" to be translated.
    - jbj: fix: apply _dependency_whiteout to erased relations too.
    - jbj: lua: display rudimentary info about lua with --showrc.
    - jbj: WRlua: preserve forward linkage by avoiding vmefail/get_date.
    - jbj: add a relation to to force install-before-erase.
    - jbj: display dependency loops as an error for now.

5.1.5 -> 5.1.6:
    - jbj: verify trigger tests have same result as HEAD.
    - jbj: backport rpmds functionality needed for file/dir triggers from HEAD.
    - jbj: backport file/directory triggers from HEAD.
    - jbj: add rpmdsMatch to match dependency against set.