@@ -88,12 +88,14 @@ LIBRPM_0
     rpmdsDNEVR;
     rpmdsELF;
     rpmdsEVR;
+    rpmdsExclude;
     rpmdsFind;
     rpmdsFlags;
     rpmdsFree;
     rpmdsFreePRCO;
     rpmdsFromPRCO;
     rpmdsGetconf;
+    rpmdsInclude;
     rpmdsInit;
     rpmdsIx;
     rpmdsLdconfig;
@@ -105,7 +107,9 @@ LIBRPM_0
     rpmdsNew;
     rpmdsNewDNEVR;
     rpmdsNewPRCO;
+    rpmdsNExclude;
     rpmdsNext;
+    rpmdsNInclude;
     _rpmds_nopromote;
     rpmdsNoPromote;
     rpmdsNotify;
@@ -159,6 +163,7 @@ LIBRPM_0
     rpmfiDigest;
     rpmfiDN;
     rpmfiDX;
+    rpmfiExclude;
     rpmfiFC;
     rpmfiFClass;
     rpmfiFColor;
@@ -180,11 +185,14 @@ LIBRPM_0
     rpmfiSetFState;
     rpmfiFUser;
     rpmfiFX;
+    rpmfiInclude;
     rpmfiInit;
     rpmfiInitD;
     rpmfiNew;
+    rpmfiNExclude;
     rpmfiNext;
     rpmfiNextD;
+    rpmfiNInclude;
     rpmfiSetDX;
     rpmfiSetFX;
     rpmfiTypeString;
